# interview-exercises

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  conanfile.py  dev_build.sh  pyproject.toml
app/: CMakeLists.txt  main.cpp
cpp_cmake_conan/: .gitignore  CMakeLists.txt  conanfile.py  pyproject.toml
cpp_cmake_conan/cmake/: conan.cmake
libgreeting/: CMakeLists.txt  build.sh  build_dev.sh  conanfile.py  dev_build.sh  libgreeting_build.txt  packer.sh
libgreeting/include/: greeting.h
libgreeting/include/greeting/: greeting.h
libgreeting/src/: greeting.cpp
libgreeting/src/include/api/: greeting.h
libgreeting/src/tests/: CMakeLists.txt
libgreeting/tests/: test.cpp
max_distance/: __init__.py  clog.py  log.py  main.py  perf_hint.py  solution.py
max_distance/solution/: __init__.py
max_distance/solution/impl/: __init__.py  linear.py  logarithmic.py  quadratic.py  square.py
packer/: __init__.py  cli.py  clog.py  color_log.py
tests/: test_max_distance.py
