[tool.poetry]
name = "max-distance"
version = "0.1.0"
description = "small thingie to calc the max distance between the equal elements in the given array"
authors = ["Peter A."]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beartype = "^0.8.1"
numpy = "^1.21.2"
python-box = "^5.4.1"
plumbum = {git = "https://github.com/tomerfiliba/plumbum.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
maxd = 'max_distance.main:run'