[tool.poetry]
name = "packer"
version = "0.1.0"
description = "conan stuff"
authors = ["Peter A. <ink.splatters@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
conan = "^1.40.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.scripts]
#packer = 'packer.cli:run'